# price-monitor

./: .flake8  .gitignore  README.md  pyproject.toml
infrastructure/: Dockerfile  docker-compose.yml
src/services/dashboard/: main.py
src/services/fake_products/: config.py  main.py
src/services/init/: main.py
src/services/monitor/: main.py  monitor.py  products_client.py
src/shared/: bus.py  config.py  factory.py  logger.py  repository.py
src/tests/: fake_factory.py  main_test.py
