[tool.poetry]
name = "decktest02"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.2"
redis = "^5.2.0"
hypercorn = "^0.17.3"
uvloop = "^0.21.0"
quart = "^0.19.8"
pydantic = "^2.9.2"
structlog = "^24.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

